add regions to output

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
     "\n",
     "def get_trending_topics(filename):\n",
     "    with open(all_topics, 'w') as tsv_file:\n",
-    "        tsv_file.write('Location Name\\tWOE ID\\tName\\tURL\\tEvents\\tPromoted?\\tQuery\\n')\n",
+    "        tsv_file.write('Location\\tWOE ID\\tName\\tURL\\tEvents\\tPromoted?\\tQuery\\n')\n",
     "\n",
     "    # iterate through all twitter locations \n",
     "    # store trending topics for each location\n",
@@ -176,7 +176,7 @@
     "    sorted_topics = sorted(top_topics, key=lambda x: (x[5], x[2]), reverse=True)\n",
     "    top_filename = \"top-\" + filename\n",
     "    with open(top_filename, 'w') as tsv_file:\n",
-    "        tsv_file.write('Location Name\\tWOE ID\\tName\\tEvents\\tPromoted?\\tCount\\n')\n",
+    "        tsv_file.write('Location\\tWOE ID\\tName\\tEvents\\tPromoted?\\tCount\\n')\n",
     "    \n",
     "        for topic in sorted_topics:\n",
     "            if topic[5] > 1:\n",
@@ -187,37 +187,39 @@
     "    topics_with_regions = []\n",
     "    region_list = []\n",
     "    with open(region_file, 'r') as regions:\n",
+    "        next(regions)\n",
     "        for line in regions:\n",
-    "            row = line.split('\\t')\n",
+    "            line = line.strip('\\n')\n",
+    "            row = line.split(',')\n",
     "            region_list.append(row)\n",
     "\n",
     "    with open(original_file, 'r') as topics:\n",
+    "        next(topics)\n",
     "        for line in topics:\n",
+    "            line = line.strip('\\n')\n",
     "            row = line.split('\\t')\n",
     "            loc = row[0]\n",
-    "            print(\"location: %s\" %(loc))\n",
     "            for region in region_list:\n",
-    "                #regions = region.split(',')\n",
     "                new_loc = region[0]\n",
-    "                #print(\"compare to: %s\" %(new_loc))\n",
     "                if loc == new_loc:\n",
-    "                    print(\"adding: %f %f %s %s\") %(region[1], region[2], region[3], region[4])\n",
     "                    row.extend([region[1], region[2], region[3], region[4]])\n",
-    "            topics_with_regions.append(row)\n",
-    "\n",
-    "    reg_filename = \"regions-\" + original_file\n",
+    "                    topics_with_regions.append(row)\n",
+    "    \n",
+    "    reg_filename = \"regions-and-\" + original_file\n",
     "    with open(reg_filename, 'w') as tsv_file:\n",
-    "        tsv_file.write('Location Name\\tWOE ID\\tName\\tEvents\\tPromoted?\\tCount\\tLatitude\\tLongitude\\tNation\\tRegion\\n')     \n",
+    "        tsv_file.write('Location\\tWOE ID\\tName\\tEvents\\tPromoted?\\tCount\\tLatitude\\tLongitude\\tNation\\tRegion\\n')     \n",
     "\n",
     "        for topic in topics_with_regions:\n",
-    "            print(row)\n",
+    "            #print(topic)\n",
     "            row = \"%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(topic[0], topic[1], topic[2], topic[3], topic[4], topic[5], topic[6], topic[7], topic[8], topic[9])\n",
-    "            tsv_file.write(row)"
+    "            tsv_file.write(row)\n",
+    "            \n",
+    "    print(\"regions added.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -257,19 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "location: Location Name\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-b38c8a39f06b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0minfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'trending-topics-17-2017-03-08.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0madd_regions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-22-0605592fd94a>\u001b[0m in \u001b[0;36madd_regions\u001b[0;34m(original_file, region_file)\u001b[0m\n\u001b[1;32m    164\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"location: %s\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mregion\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mregion_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m                 \u001b[0mregions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m                 \u001b[0mnew_loc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m                 \u001b[0;31m#print(\"compare to: %s\" %(new_loc))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
+      "regions added.\n"
      ]
     }
    ],
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -294,29 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3161"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(topic_counter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -347,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -380,19 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Established Twitter connection.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "twitter = get_twitter('settings.cfg')\n",
     "print('Established Twitter connection.')"
@@ -400,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -420,30 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(all_topics, 'w') as tsv_file:\n",
     "    tsv_file.write('Location Name\\tWOE ID\\tName\\tURL\\tEvents\\tPromoted?\\tQuery\\n')\n",
@@ -540,22 +492,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2017, 2, 3, 11, 31, 14, 575534)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -565,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -576,73 +517,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2017"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -661,22 +569,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2017-02-03'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "datestring = \"%d-%s-%s\" %(year, month, day)\n",
     "datestring"
@@ -684,22 +581,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'marc.smith.email@gmail.com,harald@digitalspacelab.com,wahmed1@sheffield.ac.uk,dianaascher@gmail.com,kara@succinctsocialmedia.com,itaihm@gmail.com,arberceni@connectedaction.net'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = configparser.ConfigParser()\n",
     "config.read('settings.cfg')\n",
@@ -710,25 +596,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "marc.smith.email@gmail.com\n",
-      "harald@digitalspacelab.com\n",
-      "wahmed1@sheffield.ac.uk\n",
-      "dianaascher@gmail.com\n",
-      "kara@succinctsocialmedia.com\n",
-      "itaihm@gmail.com\n",
-      "arberceni@connectedaction.net\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "email_list = email_addresses.split(',')\n",
     "\n",
@@ -738,23 +610,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'wordpress_xmlrpc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8799fd74a149>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mwordpress_xmlrpc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mClient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWordPressPost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mwordpress_xmlrpc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmethods\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposts\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGetPosts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNewPost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mwordpress_xmlrpc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmethods\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGetUserInfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'wordpress_xmlrpc'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from wordpress_xmlrpc import Client, WordPressPost\n",
     "from wordpress_xmlrpc.methods.posts import GetPosts, NewPost\n",
@@ -763,23 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'wordpress_xmlrpc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-b3cfd827d199>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mwordpress_xmlrpc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'wordpress_xmlrpc'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from wordpress_xmlrpc import base"
    ]
