more wip testing add regions

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -202,6 +202,7 @@
     "            for region in region_list:\n",
     "                new_loc = region[0]\n",
     "                if loc == new_loc:\n",
+    "                    #print(region)\n",
     "                    row.extend([region[1], region[2], region[3], region[4]])\n",
     "                    topics_with_regions.append(row)\n",
     "    \n",
@@ -219,9 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +266,7 @@
    ],
    "source": [
     "regions = 'region-locations.csv'\n",
-    "infile = 'trending-topics-17-2017-03-08.csv'\n",
+    "infile = 'top-trending-topics-2017-03-10.csv'\n",
     "\n",
     "add_regions(infile, regions)"
    ]
